--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="putstuffhere"></div>
     <script src="chaining.js"></script>
 </body>
 </html>
